<resources>
    <string name="app_name">Mintoners</string>
    <string name="app_title">Mintoners</string>
    <string name="version">1.0.0-beta.5</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">홈</string>
    <string name="home_card_image">home_card_image</string>
    <string name="recent_game">최근 경기</string>
    <string name="match_card_subtitle">KDK 복식/단식 매칭</string>
    <string name="match_card_title">대진표\n생성하기</string>
    <string name="match_card_image">match_card_image</string>
    <string name="recent_game_player">참가인원 : %1$d 명</string>
    <string name="recent_game_state">경기상태 : %1$s</string>
    <string name="recent_game_info">recent_game_info</string>

    <string name="example_name"><b>구너수</b> 님</string>
    <string name="example_grade">급수: <b>D</b> 조</string>
    <string name="example_club">소속: <b>마코 클럽</b></string>
    <string name="guest_login">로그인 하기</string>
    <string name="bottom_home">홈</string>
    <string name="bottom_profile">프로필</string>
    <string name="profile_guest_text">로그인 후,\n더 편리하게\n여러 사람들과 운동해보세요.</string>
    <string name="do_later">나중에 하기</string>
    <string name="app_version">앱 버전 1.0.0</string>
    <string name="check_update">최신버전</string>
    <string name="profile_menu_privacy">개인정보 수정</string>
    <string name="profile_menu_password">비밀번호 변경</string>
    <string name="profile_menu_logout">로그아웃</string>
    <string name="profile_setting_text">설정</string>
    <string name="splash_logo">splash_logo</string>
    <string name="kakao_login">kakao_login</string>
    <string name="naver_login">naver_login</string>
    <string name="match_info">match_info</string>
    <string name="match_player">match_player</string>
    <string name="match_list">match_list</string>
    <string name="match_main">match_main</string>
    <string name="personal_back_button">personal_back_button</string>
    <string name="withdraw_warning_text">회원 탈퇴 시 데이터가 전부 삭제됩니다.\n삭제된 데이터는 복구할 수 없으니 주의 바랍니다.</string>
    <string name="sync_button">sync_button</string>
    <string name="beta_feature_message">아직 구현되지 않은 기능입니다.</string>
    <string name="game_count_warning">경기 참가 인원 수가 8,12,16명인 경우에만\n3게임 대진표를 작성할 수 있습니다.\n인원수가 맞지 않을 경우 대진표를 생성할 수 없습니다.</string>
    <string name="beta_logo">현재 개발이 진행중인 베타 버전입니다.\n많은 피드백 부탁드립니다.</string>

    <string name="copy_right">© 2024 Kuneosu. All rights reserved.</string>
    <string name="developer_email">kks92155784@gmail.com</string>
    <string name="close">닫기</string>
    <string name="calendar_view">CalendarView</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="player_name">Player Name</string>
    <string name="vs">vs</string>
    <string name="plus">+</string>
    <string name="lock">lock</string>
    <string name="team_a_score">Team A Score\n</string>
    <string name="vs_dot">:</string>
    <string name="zero">0</string>
    <string name="team_b_score">Team B Score</string>
    <string name="feedback_title">문의 / 제휴</string>
    <string name="feedback_instruction">불편을 겪었거나 추가/개선 되었으면\n하는 부분이 있다면 자유롭게 작성해주세요.</string>
    <string name="feedback_hint">내용을 적어주세요.\n빠르게 답변 드리겠습니다.</string>
    <string name="send">보내기</string>
    <string name="free_match_card_sub_title">친구들과 자유롭게 한 판 !</string>
    <string name="free_match_card_title">자유 대진\n생성하기</string>
    <string name="kdk_match_card">KDK Match Card</string>
    <string name="go_to_instruction">사용설명 보러가기</string>
    <string name="default_info">기본정보</string>
    <string name="player">참가자</string>
    <string name="make_list">대진표작성</string>
    <string name="reset_list">초기화</string>
    <string name="shuffle">섞기</string>
    <string name="confirm_list">대진표 확정</string>
    <string name="previous">이전</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="match_process_title">대진표 생성</string>
    <string name="date_title">대회일자</string>
    <string name="minus">-</string>
    <string name="game_count_title">1인당 경기 수</string>
    <string name="doubles">복식</string>
    <string name="single">단식</string>
    <string name="match_title_hint">대회명을 입력해주세요.</string>
    <string name="match_title_title">대회명</string>
    <string name="next">다음</string>
    <string name="tab_layout">탭 레이아웃</string>
    <string name="update_list">대진 수정</string>
    <string name="share_list">대진 공유</string>
    <string name="end_game">경기 종료</string>
    <string name="setting">설정</string>
    <string name="version_text">앱 버전</string>
    <string name="settings_setting_text">앱 설정 변경</string>
    <string name="setting_chevron">Setting item chevron\n</string>
    <string name="setting_item_icon">Setting item icon</string>
    <string name="settings_notice_text">공지사항</string>
</resources>