<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kuneosu.mintoners.viewmodels.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity">

        <View
            android:id="@+id/home_top_view"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@color/main"
            app:layout_constraintBottom_toTopOf="@id/home_bottom_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/home_bottom_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_top_view"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/home_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/home_top_view"
            app:layout_constraintTop_toTopOf="@+id/home_top_view" />


        <!-- Home CARD -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_card"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/home_title">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/home_card"
                app:layout_constraintTop_toTopOf="@id/home_card">

                <TextView
                    android:id="@+id/home_card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/example_name"
                    android:textColor="@color/white"
                    android:shadowColor="#40000000"
                    android:shadowDy="4"
                    android:shadowDx="2"
                    android:shadowRadius="6"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/home_card_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/example_grade"
                    android:textColor="@color/white"
                    android:shadowColor="#40000000"
                    android:shadowDy="4"
                    android:shadowDx="2"
                    android:shadowRadius="6"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/home_card_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/example_club"
                    android:textColor="@color/white"
                    android:shadowColor="#40000000"
                    android:shadowDy="4"
                    android:shadowDx="2"
                    android:shadowRadius="6"
                    android:textSize="22sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/home_card_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:clipChildren="true"
                android:contentDescription="@string/home_card_image"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="90dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="@id/home_card"
                app:layout_constraintEnd_toEndOf="@id/home_card"
                app:layout_constraintTop_toTopOf="@id/home_card">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/home_card_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/home_recent_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/recent_game"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/home_recent_game_recycler"
            app:layout_constraintStart_toStartOf="parent" />


        <!-- Recent GAME CARDS -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recent_game_recycler"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/home_bottom_view" />

        <!-- Match Making -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_make_match_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_recent_game_recycler">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_card_subtitle"
                    android:textColor="#80000000"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_card_title"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/match_card_image"
                    android:src="@drawable/tournament"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>