<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_app_bar_height"
    android:background="@color/light_gray_background"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_top_bar_height"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/setting_back_button"
            android:layout_width="@dimen/match_main_top_bar_icon_size"
            android:layout_height="@dimen/match_main_top_bar_icon_size"
            android:layout_marginStart="@dimen/margin_small"
            android:contentDescription="Setting back button"
            android:padding="@dimen/padding_small"
            android:src="@drawable/main_chevron_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/logo_bold"
            android:text="@string/app_title"
            android:textColor="@color/main"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/settings_background"
        android:padding="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/settings_top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_setting_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            app:layout_constraintBottom_toTopOf="@id/settings_notice_item"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/setting_icon"
                android:layout_width="@dimen/match_main_top_bar_icon_size"
                android:layout_height="@dimen/match_main_top_bar_icon_size"
                android:contentDescription="@string/setting_item_icon"
                android:padding="@dimen/padding_small"
                android:src="@drawable/settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/settings_setting_text"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/setting_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/setting_chevron"
                android:layout_width="@dimen/match_main_top_bar_icon_size"
                android:layout_height="@dimen/match_main_top_bar_icon_size"
                android:contentDescription="@string/setting_chevron"
                android:padding="@dimen/padding_small"
                android:rotation="180"
                android:src="@drawable/chevron_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_notice_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            app:layout_constraintBottom_toTopOf="@id/settings_feedback_item"
            app:layout_constraintTop_toBottomOf="@id/settings_setting_item">

            <ImageView
                android:id="@+id/notice_icon"
                android:layout_width="@dimen/match_main_top_bar_icon_size"
                android:layout_height="@dimen/match_main_top_bar_icon_size"
                android:contentDescription="@string/setting_item_icon"
                android:padding="@dimen/padding_small"
                android:src="@drawable/notice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/settings_notice_text"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/notice_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notice_chevron"
                android:layout_width="@dimen/match_main_top_bar_icon_size"
                android:layout_height="@dimen/match_main_top_bar_icon_size"
                android:contentDescription="@string/setting_chevron"
                android:padding="@dimen/padding_small"
                android:rotation="180"
                android:src="@drawable/chevron_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_feedback_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_notice_item">

            <ImageView
                android:id="@+id/feedback_icon"
                android:layout_width="@dimen/match_main_top_bar_icon_size"
                android:layout_height="@dimen/match_main_top_bar_icon_size"
                android:contentDescription="@string/setting_item_icon"
                android:padding="@dimen/padding_small"
                android:src="@drawable/feedback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/feedback_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/feedback_title"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/feedback_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/feedback_chevron"
                android:layout_width="@dimen/match_main_top_bar_icon_size"
                android:layout_height="@dimen/match_main_top_bar_icon_size"
                android:contentDescription="@string/setting_chevron"
                android:padding="@dimen/padding_small"
                android:rotation="180"
                android:src="@drawable/chevron_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/settings_background"
        app:layout_constraintTop_toBottomOf="@id/settings_items">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/version_text"
            android:textColor="@color/trans_black_50"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text=""
            android:textColor="@color/trans_black_50"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
