<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_withdraw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="HardcodedText"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_withdraw_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_top_bar_height"
        android:paddingHorizontal="@dimen/padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_withdraw_back_button"
            android:layout_width="@dimen/match_main_top_bar_icon_size"
            android:layout_height="@dimen/match_main_top_bar_icon_size"
            android:contentDescription="@string/personal_back_button"
            android:padding="@dimen/padding_small"
            android:src="@drawable/main_chevron_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원 탈퇴"
            android:textColor="@color/black"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/trans_black_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_withdraw_warning_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_top_bar_height"
        android:background="#1A4B89DC"
        android:padding="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@id/profile_withdraw_top_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_warning_text"
            android:textColor="@color/trans_black_50"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_withdraw_warning_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:paddingBottom="@dimen/card_height">

            <TextView
                android:id="@+id/profile_withdraw_title_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:fontFamily="@font/logo_bold"
                android:text="@string/app_title"
                android:textColor="@color/main"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_withdraw_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="탈퇴 사유를 선택해주세요."
                android:textColor="@color/trans_black_50"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_title_logo" />

            <View
                android:id="@+id/profile_withdraw_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/trans_black_50"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_title_text" />

            <CheckBox
                android:id="@+id/profile_withdraw_reason1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="서비스 이용이 불편해요."
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_divider" />

            <CheckBox
                android:id="@+id/profile_withdraw_reason2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="잘 사용하지 않아요."
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_reason1" />

            <CheckBox
                android:id="@+id/profile_withdraw_reason3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="비슷한 다른 서비스가 더 좋아요."
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_reason2" />

            <CheckBox
                android:id="@+id/profile_withdraw_reason4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="직접 입력할게요."
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_reason3" />

            <EditText
                android:autofillHints="0"
                android:id="@+id/profile_withdraw_reason_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/match_edittext"
                android:hint="탈퇴하시려는 이유를 입력해주세요..\n \n "
                android:inputType="text"
                android:padding="@dimen/padding_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                app:layout_constraintTop_toBottomOf="@id/profile_withdraw_reason4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_withdraw_withdraw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2xlarge"
                android:background="@drawable/match_withdraw_button"
                android:text="회원 탈퇴"
                android:contentDescription="회원 탈퇴 버튼"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                app:layout_constraintTop_toBottomOf="@+id/profile_withdraw_reason_input" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
